fix: padding is less chunky on mobile

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -38,7 +38,7 @@
     --big-gap: 2rem;
     
     --container-padding: 2rem 2.5rem;
-    --card-padding: 1.25rem 2rem;
+    --card-padding: 1.5rem;
     --button-padding: 0.5rem 1rem;
     --sidebar-padding: 1.5rem;
 
@@ -713,6 +713,7 @@ a {
 @media screen and (max-width: 800px) {
     * {
         --icon-size: 1.5rem;
+        --container-padding: 2rem;
     }
     
     body {
